--- a/lit.bib
+++ b/lit.bib
@@ -1039,6 +1039,19 @@
   timestamp = {2014.08.04}
 }
 
+@INPROCEEDINGS{AL13,
+  author = {James, P. and Lawrence, A. and Moller, F. and Roggenbach, M. and
+	Seisenberger, M. and Setzer, A. and Kanso, K. and Chadwick, S.},
+  title = {Verification of Solid State Interlocking Programs},
+  booktitle = {FM-Rail-BOK Workshop},
+  year = {2013},
+  volume = {20},
+  series = {DTU Compute Technical Report},
+  publisher = {DTU},
+  owner = {andylawrence},
+  timestamp = {2014.11.16}
+}
+
 @PHDTHESIS{kahsai10,
   author = {Temesghen Kahsai},
   title = {{P}roperty {P}reserving {D}evelopment and {T}esting for {CSP-CASL}},
