--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -286,7 +286,7 @@ There are numerous ways in which our model can be extended. One of the biggest p
 \begin{comment}
 Currently the track is closed and trains are capable of looping round the track giving it a very large state space due to number of possible combinations of train location and speed. Opening up the track with an entrance and exit would provide the opportunity to model the hand over part of the protocol where new trains must register with the RBC on entering the track and then de-register upon leaving. This would  This example could then be extended by increasing the complexity of the track further and then modelling routes and points. This would allow for the checking of a further safety conditions that states no train has a movement authority over a point in locked in the wrong direction or a moving point.
 \end{comment}
-It is highly desirable to be able to verify properties about the energy consumption of the ERTMS and tradition railway control systems and prove that the former is more efficient than the later. It is also desirable to verify properties of the systems performance in a similar fashion; our current model provides a framework for this.
+It is highly desirable to be able to verify properties about the energy consumption of the ERTMS and traditional railway control systems and prove that the former is more efficient than the latter. It is also desirable to verify properties of the systems performance in a similar fashion; our current model provides a framework for this.
 
-The next challenge would be to verify  some real world track layouts as would be controlled by the ERTMS system on its implementation. This would require further removal non-determinism from the models and a more general approach to modelling the railway interlocking. A summer project student at Swansea University has successfully modelled an interlocking, which acts an ladder logic interpreter, and executes a ladder logic program. This could be integrated with our model and would allow for a general approach to model tracks, rather than having to model each interlocking by hand.
+The next challenge would be to verify  some real world track layouts as would be controlled by the ERTMS system on its implementation. This would require further removal of non-determinism from the models and a more general approach to modelling the railway interlocking. A summer project student at Swansea University has successfully modelled an interlocking, which acts a ladder logic interpreter, and executes a ladder logic program. This could be integrated with our model and would allow for a general approach to model tracks, rather than having to model each interlocking by hand.
 
